Fix unreadable text

--- a/OpenOversight/app/static/css/openoversight.css
+++ b/OpenOversight/app/static/css/openoversight.css
@@ -325,10 +325,6 @@ a > .tutorial{
     font-size: smaller;
 }
 
-.text-gray-lighter {
-    color: #D3D3D3;
-}
-
 .bg-light-gray {
     background-color: #eeeeee;
 }
